# warfront2

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/skills/wf-add-problem/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  problem-suggestion.md
docs/: DESIGN.md  SOURCES.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
graphify-out/memory/: query_20260720_090329_home_py와_fsrs_스케줄러의_정확한_관계는.md
graphify-out/wiki/: CLI_진입점·속성_모드.md  DiagramPanel.md  HomeScreen.md  Kata.md  KataScreen.md  RecognitionScreen.md  ResultScreen.md  SQLite_기록_저장소.md  SolveScreen.md  TypingSession.md  WarfrontApp.md  index.md  warfront2_—_터미널_코딩테스트_훈련기.md  기록_동기화(sync).md  백지_구현_화면(solve).md  설계_계보·UX_참조.md  스크린샷-_대시보드.md  스크린샷-_따라치기.md  스크린샷-_인식_드릴.md  앱_코어·결과_화면.md  온보딩_문서·운영_체계.md  인식_드릴_화면.md  채점_엔진.md  카타_타이핑_화면.md  콘텐츠_로더.md  타이핑_지표(WPM·정확도).md  타이핑_판정_로직.md  패키지_메타.md  패키지_초기화.md  패키지_초기화_2.md  패키지_초기화_3.md  패키지_초기화_4.md  훈련_설계_원칙(4단계).md
tests/: test_core.py
tools/: capture_shots.sh  growth_gif.py  logo.py
wf/: __init__.py  app.py  character.py  cli.py  sync.py  widgets.py
wf/content/: curriculum.yaml  loader.py  meta.json  recognition.json  sprint.json
wf/content/katas/: 00_pythonics_parse.json  01_sim_robot.json  02_topk_counter.json  03_greedy_meetings.json  04_stack_brackets.json  05_heap_merge.json  06_backtrack_subset.json  07_bfs_grid.json  08_dfs_islands.json  (+8 more)
wf/engine/: grader.py  typing_engine.py
wf/screens/: drill.py  home.py  kata.py  result.py  solve.py
wf/store/: db.py
(+7 files in other folders)
